Structure changed as described in fosaguide

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,10 @@
 *.aux
 *.log
-*.lof
-*.lol
 *.toc
 *.out
 *.tmp
 *.bak
-*.gz
+tex/fosahmat_main.pdf
 *.swp
-*.gnuplot
-*eps-converted*.pdf
-*.bbl
-*.blg
-*.idx
-*.ilg
-*.ind
-*.lot
+
+fosahmat_main.synctex.gz
